--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
     "tmi.js": "^1.8.5"
