--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@google/generative-ai": "^0.2.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
