--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@google/generative-ai": "^0.2.0",
     "axios": "^1.6.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
