--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "gtts": "^0.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.2",
