--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mp3-duration": "^1.1.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "redis": "^4.6.14",
     "socket.io": "^4.7.2",
     "tmi.js": "^1.8.5"
   },
