--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "gtts": "^0.2.1",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "mp3-duration": "^1.1.0",
